--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite preview",
+
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-items": "^0.1.0",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.2.0",
     "vite": "^5.3.1"
   }
 }
